Thu Sep 02 01:45:46 BST 2004  Olly Betts <olly@survex.com>

	* templates/query: Always report database not found - previously we
	  only did so if there was a query.  Also fixed missing </center>
	  tag which happened in certain cases.

Wed Aug 25 23:19:47 BST 2004  Olly Betts <olly@survex.com>

	* omindex.cc: When running with "replace duplicates" mode (the
	  default), detect documents removed since the last indexing
	  run and delete them from the database (bug #34).

Tue Aug 24 19:23:55 BST 2004  Olly Betts <olly@survex.com>

	* omega.cc: Added FIXME comment noting that SORT and SORTBANDS should
	  be tracked and the results reset to the first page if they change.

Tue Aug 24 19:23:07 BST 2004  Olly Betts <olly@survex.com>

	* Makefile.am: Install htdig2omega and htdig2omega.script.

Mon Aug 23 22:29:53 BST 2004  Olly Betts <olly@survex.com>

	* scriptindex.cc: Report index file name and line number when
	  reporting errors in it.  Added warning for redundant actions,
	  such as "truncate" as the last action in a rule.

Mon Aug 23 22:03:25 BST 2004  Olly Betts <olly@survex.com>

	* omindex.cc: Use the new replace_document(term, doc) method.

Sun Aug 22 13:11:23 BST 2004  Olly Betts <olly@survex.com>

	* configure.in,configure.ac: Renamed configure.in to configure.ac.

Sat Aug 21 12:41:43 BST 2004  Olly Betts <olly@survex.com>

	* docs/omegascript.txt: Added note about that $add{$hit,1} gives
	  the "hit number".

Fri Aug 20 20:28:16 BST 2004  Olly Betts <olly@survex.com>

	* Makefile.am: Link with -lxapianqueryparser, not -lomqueryparser.

Thu Aug 19 19:13:34 BST 2004  Olly Betts <olly@survex.com>

	* Makefile.am: And actually ship htdig2omega and htdig2omega.script!

Thu Aug 19 19:02:40 BST 2004  Olly Betts <olly@survex.com>

	* htdig2omega,htdig2omega.script: Added perl script and corresponding
	  scriptindex index script which allow an ht://dig database to be
	  imported into Xapian.  This provides an easy way to provide a search